--- a/src/modules/components/button/Button.module.scss
+++ b/src/modules/components/button/Button.module.scss
@@ -15,6 +15,7 @@
   transition: all 0.35s ease;
   color: $site-color-2;
   padding: 0 12px;
+  outline: none;
 
   &:hover {
     color: $site-color-1;
