--- a/src/Variables.scss
+++ b/src/Variables.scss
@@ -36,6 +36,7 @@ $site-color-10: rgba(228, 0, 127, 1); // цвета
 $site-color-11: rgba(255, 0, 0, 1); // цвета
 $site-color-12: rgba(17, 17, 20, 0.5); // поле в модалке какой то
 $site-color-13: rgb(0, 0, 0); // фон модалки
+$site-color-14: rgba(28, 28, 31, 1); // $site-color-4 + $site-color-12
 
 $fontCustom1: "Minecraft Title Cyrillic";
 $fontCustom2: "Minecraft Rus";
