--- a/src/modules/components/[0_grouped_0]-Profile/gallery/Gallery.module.scss
+++ b/src/modules/components/[0_grouped_0]-Profile/gallery/Gallery.module.scss
@@ -41,25 +41,17 @@
     }
 
     .one_post_gallery {
-      width: auto;
-      padding: 10px;
       display: flex;
       flex-direction: row;
-      justify-content: center;
-      margin: 4px 0 4px 0;
       background: $site-color-12;
       border: 1px solid $site-color-5;
       border-radius: 5px;
+      margin: 4px 0 4px 0;
       height: auto;
+      width: 100%;
       min-height: fit-content;
       max-height: none;
-      text-decoration: none;
-      transition: all 0.35s ease;
       position: relative;
-
-      &:hover {
-        background: $site-color-1;
-      }
 
       .status {
         position: absolute;
@@ -72,7 +64,6 @@
         font-family: $fontCustom2;
         opacity: 0.8;
         color: $site-color-4;
-        min-width: 160px;
       }
 
       .green {
@@ -83,83 +74,101 @@
         background: $site-color-11;
       }
 
-      .wrapper_image {
+      .none {
+        display: none;
+      }
+
+      .link_to {
+        width: 100%;
+        height: auto;
+        text-decoration: none;
         display: flex;
         flex-direction: row;
         justify-content: center;
-        align-items: center;
-        position: relative;
-        overflow: hidden;
-        width: 230px;
-        max-width: 230px;
-        min-width: 230px;
-        height: auto;
-        max-height: 120px;
-        margin: auto 0;
-        border: none;
-        border-radius: 5px;
+        transition: all 0.35s ease;
+        padding: 10px 0 10px 10px;
 
-        .image {
-          width: 100%;
-          height: 100%;
-          margin: 0 auto;
-        }
-      }
-
-      .description_post {
-        display: flex;
-        flex-direction: column;
-        justify-content: space-around;
-        width: 100%;
-
-        .title {
-          font-size: 16px;
-          font-weight: 400;
-          font-family: $fontCustom2;
-          text-align: center;
-          width: 100%;
-          height: 35px;
-          line-height: 35px;
-          padding: 0 10px;
-          color: $site-color-2;
-        }
-
-        .paragraph {
-          display: flex;
-          font-size: 12px;
-          font-weight: 400;
-          font-family: $fontCustom2;
-          line-height: 1.35;
-          padding: 0 25px;
-          color: $site-color-2;
-          width: auto;
-          text-align: center;
-          margin: 4px auto;
-        }
-
-        .tags {
+        .wrapper_image {
           display: flex;
           flex-direction: row;
           justify-content: center;
-          flex-wrap: wrap;
-          width: 100%;
-          margin: 4px auto;
+          align-items: center;
+          position: relative;
+          overflow: hidden;
+          width: 230px;
+          max-width: 230px;
+          min-width: 230px;
           height: auto;
-          min-height: 24px;
-          max-height: none;
+          max-height: 120px;
+          margin: auto 0;
+          border: none;
+          border-radius: 5px;
 
-          .oneTag {
-            margin: 2px 4px;
-            font-size: 11px;
-            font-family: $fontCustom2;
-            height: 20px;
-            line-height: 20px;
-            border-radius: 4px;
-            color: darken($site-color-2, 50%);
-            background: lighten($site-color-12, 20%);
-            padding: 0 8px;
+          .image {
+            width: 100%;
+            height: 100%;
+            margin: 0 auto;
           }
         }
+
+        .description_post {
+          display: flex;
+          flex-direction: column;
+          justify-content: space-around;
+          width: 100%;
+
+          .title {
+            font-size: 15px;
+            font-weight: 400;
+            font-family: $fontCustom2;
+            text-align: center;
+            width: 100%;
+            height: 35px;
+            line-height: 35px;
+            padding: 0 10px;
+            color: $site-color-2;
+          }
+
+          .paragraph {
+            display: flex;
+            font-size: 12px;
+            font-weight: 400;
+            font-family: $fontCustom2;
+            line-height: 1.4;
+            padding: 0 25px;
+            color: $site-color-2;
+            width: auto;
+            text-align: center;
+            margin: 4px auto;
+          }
+
+          .tags_view {
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+            flex-wrap: wrap;
+            width: 100%;
+            margin: 4px auto;
+            height: auto;
+            min-height: 24px;
+            max-height: none;
+          }
+        }
+
+        &:hover {
+          background: $site-color-1;
+        }
+      }
+
+      .action_column {
+        width: 100%;
+        min-width: 44px;
+        max-width: 44px;
+        height: 100%;
+        display: flex;
+        padding: 0 2px;
+        flex-direction: column;
+        justify-content: space-around;
       }
     }
   }
@@ -172,6 +181,31 @@
 }
 
 @media screen and (max-width: 1280px) {
+  .gallery_block {
+    .box_all_post {
+      .one_post_gallery {
+        flex-direction: column;
+
+        .link_to {
+          padding: 10px 10px 10px 4px;
+
+          .title {
+            font-size: 14px;
+          }
+        }
+
+        .action_column {
+          width: auto;
+          min-width: 120px;
+          max-width: none;
+          height: auto;
+          padding: 4px 0;
+          margin: 0 auto;
+          flex-direction: row;
+        }
+      }
+    }
+  }
 }
 
 @media screen and (max-width: 1024px) {
@@ -181,14 +215,6 @@
   .gallery_block {
     .box_all_post {
       padding-right: 0;
-
-      .one_post_gallery {
-        .description_post {
-          .tags {
-            margin: 6px auto;
-          }
-        }
-      }
     }
   }
 }
@@ -197,23 +223,29 @@
   .gallery_block {
     .box_all_post {
       .one_post_gallery {
-        flex-direction: column;
-
         .status {
-          top: 6%;
+          top: 12%;
         }
 
-        .wrapper_image {
-          width: 330px;
-          max-width: 330px;
-          min-width: 330px;
-          max-height: 220px;
-          margin: 0 auto;
-        }
+        .link_to {
+          flex-direction: column;
 
-        .description_post {
-          .title {
-            font-size: 14px;
+          .wrapper_image {
+            width: 330px;
+            max-width: 330px;
+            min-width: 330px;
+            max-height: 220px;
+            margin: 0 auto;
+          }
+
+          .description_post {
+            .title {
+              font-size: 14px;
+            }
+
+            .paragraph {
+              font-size: 11.5px;
+            }
           }
         }
       }
@@ -225,17 +257,19 @@
   .gallery_block {
     .box_all_post {
       .one_post_gallery {
-        .description_post {
-          .title {
-            font-size: 13px;
-            min-height: 32px;
-            height: auto;
-            line-height: 1.5;
-            padding: 6px 8px;
-          }
+        .link_to {
+          .description_post {
+            .title {
+              font-size: 13px;
+              min-height: 32px;
+              height: auto;
+              line-height: 1.5;
+              padding: 6px 8px;
+            }
 
-          .paragraph {
-            font-size: 11px;
+            .paragraph {
+              font-size: 11px;
+            }
           }
         }
       }
@@ -247,13 +281,22 @@
   .gallery_block {
     .box_all_post {
       .one_post_gallery {
-        .description_post {
-          .title {
-            padding: 6px;
+        .link_to {
+          .wrapper_image {
+            width: 100%;
+            max-width: 100%;
+            min-width: 100%;
+            max-height: 240px;
           }
 
-          .paragraph {
-            padding: 0 8px;
+          .description_post {
+            .title {
+              padding: 6px;
+            }
+
+            .paragraph {
+              padding: 0 8px;
+            }
           }
         }
       }
