--- a/src/modules/components/image-editor/local/button/Button.module.scss
+++ b/src/modules/components/image-editor/local/button/Button.module.scss
@@ -5,7 +5,6 @@
   height: 46px;
   border-radius: 50%;
   background: transparent;
-  fill: $site-color-2;
   transition: 0.35s;
   display: flex;
   align-items: center;
@@ -13,30 +12,125 @@
   border: none;
   outline: none;
   cursor: pointer;
-  color: currentColor;
+  color: $site-color-2;
   padding: 0;
 
-  &:hover,
-  &:focus {
+  &:hover {
     background: rgba($site-color-2, 0.03);
+
+    svg {
+      path {
+        fill: $site-color-9;
+      }
+    }
+
+    .span_stroke {
+      svg {
+        path {
+          fill: none;
+          stroke: $site-color-9;
+        }
+      }
+    }
+  }
+
+  svg {
+    path {
+      fill: $site-color-2;
+      transition: all 0.3s ease;
+    }
+  }
+
+  .span_stroke {
+    display: flex;
+    width: auto;
+    height: auto;
+
+    svg {
+      path {
+        fill: none;
+        stroke: $site-color-2;
+        transition: all 0.3s ease;
+      }
+    }
   }
 
   &:disabled {
-    fill: $site-color-5;
+    color: $site-color-5;
     cursor: default;
 
     &:hover {
       background: transparent;
+    }
+
+    svg {
+      path {
+        fill: $site-color-5;
+      }
+    }
+
+    .span_stroke {
+      svg {
+        path {
+          fill: none;
+          stroke: $site-color-5;
+        }
+      }
     }
   }
 }
 
 .image_editor_button_active {
   background: rgba($site-color-2, 0.03);
-  fill: $site-color-8;
+  color: $site-color-8 !important;
+
+  svg {
+    path {
+      fill: $site-color-8 !important;
+    }
+  }
+
+  .span_stroke {
+    svg {
+      path {
+        fill: none;
+        stroke: $site-color-8 !important;
+      }
+    }
+  }
 }
 
-//@media (max-width: 540px) {
-//  width: 32px;
-//  height: 32px;
-//}
+@media screen and (max-width: 1600px) {
+}
+
+@media screen and (max-width: 1400px) {
+}
+
+@media screen and (max-width: 1280px) {
+}
+
+@media screen and (max-width: 1024px) {
+}
+
+@media screen and (max-width: 960px) {
+  .image_editor_button {
+    width: 38px;
+    height: 38px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+}
+
+@media screen and (max-width: 640px) {
+}
+
+@media screen and (max-width: 480px) {
+  .image_editor_button {
+    width: 32px;
+    height: 32px;
+  }
+}
+
+@media screen and (max-width: 360px) {
+}
