--- a/src/modules/components/image-editor/local/navigation/Navigation.module.scss
+++ b/src/modules/components/image-editor/local/navigation/Navigation.module.scss
@@ -1,9 +1,8 @@
 @import "../../../../../Variables";
 
 .navigation {
-  background: $site-color-4;
+  background: $site-color-12;
   height: 84px;
-  border-top: 1px solid $site-color-5;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -20,30 +19,88 @@
     justify-content: center;
   }
 
-  .translate {
+  .text_position {
     position: absolute;
     top: -15px;
     left: 50%;
     transform: translate(-50%);
-    padding: 0 24px;
-    width: auto;
-    height: 32px;
-    line-height: 32px;
-    font-size: 12px;
-    font-weight: 400;
-    font-family: $fontCustom2;
-    text-align: center;
-    color: $site-color-2;
-    opacity: 0;
-    transition: opacity 0.25s ease;
-    background: $site-color-4;
-    border-top: 2px solid $site-color-5;
-    border-top-left-radius: 8px;
-    border-top-right-radius: 8px;
   }
 
   .navigation_one_button {
     margin-left: 8px;
     margin-right: 8px;
   }
+}
+
+@media screen and (max-width: 1600px) {
+}
+
+@media screen and (max-width: 1400px) {
+}
+
+@media screen and (max-width: 1280px) {
+  .navigation {
+    margin-top: auto;
+
+    .navigation_one_button {
+      margin-left: 6px;
+      margin-right: 6px;
+    }
+  }
+}
+
+@media screen and (max-width: 1024px) {
+}
+
+@media screen and (max-width: 960px) {
+  .navigation {
+    height: 68px;
+
+    .navigation_one_button {
+      margin-left: 4px;
+      margin-right: 4px;
+    }
+
+    .text_position {
+      top: -18px;
+    }
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .navigation {
+    position: relative;
+
+    .box_actions {
+      flex-direction: row;
+      width: 320px;
+      overflow: auto;
+      justify-content: flex-start;
+      padding-bottom: 4px;
+      top: 3.5px;
+      position: relative;
+
+      &::-webkit-scrollbar {
+        height: 3px;
+      }
+    }
+
+    .text_position {
+      display: none;
+    }
+  }
+}
+
+@media screen and (max-width: 640px) {
+}
+
+@media screen and (max-width: 480px) {
+  .navigation {
+    .box_actions {
+      width: 228px;
+    }
+  }
+}
+
+@media screen and (max-width: 360px) {
 }
