--- a/src/modules/pages/cab/Cab.module.scss
+++ b/src/modules/pages/cab/Cab.module.scss
@@ -21,7 +21,7 @@
   .boxWrapper {
     max-width: 1580px;
     width: 100%;
-    height: 800px;
+    height: 88vh;
     background: $site-color-4;
     margin: 24px auto 24px auto;
     display: flex;
@@ -362,7 +362,7 @@
       }
 
       .columnTwo {
-        padding: 0 6px;
+        padding: 4px 6px;
       }
     }
   }
