--- a/src/modules/components/[0_grouped_0]-Profile/gallery/EditAddPost.module.scss
+++ b/src/modules/components/[0_grouped_0]-Profile/gallery/EditAddPost.module.scss
@@ -56,14 +56,22 @@
             background: $site-color-12;
             position: relative;
 
-            .count {
+            .count,
+            .size {
               font-size: 16px;
               font-family: $fontCustom2;
               font-weight: 400;
               color: $site-color-5;
               position: absolute;
               bottom: 5%;
+            }
+
+            .count {
               right: 3%;
+            }
+
+            .size {
+              left: 3%;
             }
 
             .image_prev {
