--- a/src/modules/pages/gallery/Gallery.module.scss
+++ b/src/modules/pages/gallery/Gallery.module.scss
@@ -63,24 +63,31 @@
       transition: all 0.35s ease;
 
       &:hover {
-        scale: 1.1;
+        scale: 1.065;
+        cursor: pointer;
       }
 
       .wrapper_image {
-        width: 100%;
-        height: 100%;
         display: flex;
         flex-direction: row;
         justify-content: center;
         align-items: center;
         position: relative;
+        overflow: hidden;
+        width: 100%;
+        max-width: 100%;
+        min-width: 100%;
+        height: 100%;
+        max-height: 100%;
+        min-height: 100%;
+        margin: auto 0;
+        border: none;
+        border-radius: 5px;
 
-        .img {
-          display: flex;
+        .image {
           width: 100%;
           height: 100%;
-          cursor: pointer;
-          scale: 1.02;
+          margin: 0 auto;
         }
       }
 
