--- a/src/modules/components/[0_grouped_0]-Profile/gallery/Gallery.module.scss
+++ b/src/modules/components/[0_grouped_0]-Profile/gallery/Gallery.module.scss
@@ -99,8 +99,9 @@
           width: 230px;
           max-width: 230px;
           min-width: 230px;
-          height: auto;
+          height: 120px;
           max-height: 120px;
+          min-height: 120px;
           margin: auto 0;
           border: none;
           border-radius: 5px;
@@ -222,6 +223,7 @@
             width: 330px;
             max-width: 330px;
             min-width: 330px;
+            height: 220px;
             max-height: 220px;
             min-height: 220px;
             margin: 0 auto;
@@ -267,6 +269,7 @@
             width: 100%;
             max-width: 100%;
             min-width: 100%;
+            height: 240px;
             max-height: 240px;
             min-height: 240px;
           }
