new editors & icons & +bugs (#22)
new editor

--- a/src/modules/components/[0_grouped_0]-Profile/gallery/Gallery.module.scss
+++ b/src/modules/components/[0_grouped_0]-Profile/gallery/Gallery.module.scss
@@ -87,6 +87,7 @@
         justify-content: center;
         transition: all 0.35s ease;
         padding: 10px 0 10px 10px;
+        border-radius: 5px;
 
         .wrapper_image {
           display: flex;
@@ -98,8 +99,9 @@
           width: 230px;
           max-width: 230px;
           min-width: 230px;
-          height: auto;
+          height: 120px;
           max-height: 120px;
+          min-height: 120px;
           margin: auto 0;
           border: none;
           border-radius: 5px;
@@ -127,19 +129,6 @@
             line-height: 35px;
             padding: 0 10px;
             color: $site-color-2;
-          }
-
-          .paragraph {
-            display: flex;
-            font-size: 12px;
-            font-weight: 400;
-            font-family: $fontCustom2;
-            line-height: 1.4;
-            padding: 0 25px;
-            color: $site-color-2;
-            width: auto;
-            text-align: center;
-            margin: 4px auto;
           }
 
           .tags_view {
@@ -234,17 +223,15 @@
             width: 330px;
             max-width: 330px;
             min-width: 330px;
+            height: 220px;
             max-height: 220px;
+            min-height: 220px;
             margin: 0 auto;
           }
 
           .description_post {
             .title {
               font-size: 14px;
-            }
-
-            .paragraph {
-              font-size: 11.5px;
             }
           }
         }
@@ -266,10 +253,6 @@
               line-height: 1.5;
               padding: 6px 8px;
             }
-
-            .paragraph {
-              font-size: 11px;
-            }
           }
         }
       }
@@ -286,16 +269,14 @@
             width: 100%;
             max-width: 100%;
             min-width: 100%;
+            height: 240px;
             max-height: 240px;
+            min-height: 240px;
           }
 
           .description_post {
             .title {
               padding: 6px;
-            }
-
-            .paragraph {
-              padding: 0 8px;
             }
           }
         }
