--- a/src/modules/pages/gallery/Gallery.module.scss
+++ b/src/modules/pages/gallery/Gallery.module.scss
@@ -63,24 +63,31 @@
       transition: all 0.35s ease;
 
       &:hover {
-        scale: 1.1;
+        scale: 1.065;
+        cursor: pointer;
       }
 
       .wrapper_image {
-        width: 100%;
-        height: 100%;
         display: flex;
         flex-direction: row;
         justify-content: center;
         align-items: center;
         position: relative;
+        overflow: hidden;
+        width: 100%;
+        max-width: 100%;
+        min-width: 100%;
+        height: 100%;
+        max-height: 100%;
+        min-height: 100%;
+        margin: auto 0;
+        border: none;
+        border-radius: 5px;
 
-        .img {
-          display: flex;
+        .image {
           width: 100%;
           height: 100%;
-          cursor: pointer;
-          scale: 1.02;
+          margin: 0 auto;
         }
       }
 
@@ -226,6 +233,7 @@ body {
         max-width: 1400px !important;
         margin: 0 auto;
         height: auto;
+        min-height: 80vh;
       }
     }
 
@@ -316,10 +324,7 @@ body {
           margin: 8px auto 32px auto;
         }
 
-        .text_paragraph {
-          text-indent: 16px;
-          font-weight: 400;
-          font-size: 14px;
+        .text {
           color: $site-color-2;
           line-height: 1.4;
         }
