--- a/src/modules/components/preloader/Preload.module.scss
+++ b/src/modules/components/preloader/Preload.module.scss
@@ -2,15 +2,18 @@
 
 .preloaderWrapper {
   width: 100%;
-  height: 80vh;
+  height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
 
   .preloader {
-    width: 100px;
-    height: 100px;
+    width: auto;
+    height: auto;
     margin: 0 auto;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
   }
 }
 
