--- a/src/modules/pages/gallery/Gallery.module.scss
+++ b/src/modules/pages/gallery/Gallery.module.scss
@@ -40,7 +40,7 @@
     justify-content: center;
     width: 100%;
     height: auto;
-    padding: 0 8px;
+    padding: 0 0 16px 0;
     border: 1px solid $site-color-5;
     background: $site-color-4;
     margin-bottom: 16px;
@@ -54,17 +54,14 @@
       position: relative;
       overflow: hidden;
       width: 350px;
-      height: 200px;
-      min-height: 200px;
-      max-height: 200px !important;
       border: none;
       border-radius: 8px;
-      margin: 15px;
+      margin: 16px;
       transition: all 0.35s ease;
+      cursor: pointer;
 
       &:hover {
         scale: 1.065;
-        cursor: pointer;
       }
 
       .wrapper_image {
@@ -74,12 +71,12 @@
         align-items: center;
         position: relative;
         overflow: hidden;
-        width: 100%;
-        max-width: 100%;
-        min-width: 100%;
-        height: 100%;
-        max-height: 100%;
-        min-height: 100%;
+        width: 350px;
+        max-width: 350px;
+        min-width: 350px;
+        height: 200px;
+        max-height: 200px;
+        min-height: 200px;
         margin: auto 0;
         border: none;
         border-radius: 5px;
