--- a/src/modules/components/preloader/Preload.module.scss
+++ b/src/modules/components/preloader/Preload.module.scss
@@ -3,6 +3,7 @@
 .preloaderWrapper {
   width: 100%;
   height: 100%;
+  min-height: 80vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
