fix text editor + image slider

--- a/src/modules/components/[0_grouped_0]-Profile/gallery/EditAddPost.module.scss
+++ b/src/modules/components/[0_grouped_0]-Profile/gallery/EditAddPost.module.scss
@@ -372,6 +372,12 @@ body {
       height: auto;
       margin: 0 auto;
     }
+
+    .pre {
+      opacity: 0;
+      width: 0;
+      height: 0;
+    }
   }
 
   .overlay_modal_image_redactor {
