--- a/src/modules/pages/gallery/Gallery.module.scss
+++ b/src/modules/pages/gallery/Gallery.module.scss
@@ -80,6 +80,7 @@
         margin: auto 0;
         border: none;
         border-radius: 5px;
+        background: $site-color-12;
 
         .image {
           width: 100%;
@@ -221,56 +222,88 @@ body {
       border: 1px solid $site-color-5;
       border-radius: 4px;
       width: 100%;
-      max-width: 90%;
+      max-width: 90vw;
+      max-height: 85vh;
       margin: 0 auto;
-      padding: 15px;
     }
 
     .container_description {
       display: flex;
-      flex-direction: row;
+      flex-direction: column;
       width: 100%;
-      max-width: 90%;
-      margin: 15px auto 0 auto;
+      max-width: 90vw;
+      margin: 16px auto 0 auto;
       height: auto;
       background: $site-color-12;
       border: 1px solid $site-color-5;
       border-radius: 4px;
       padding: 15px;
 
-      .container_builders {
+      .title {
+        font-weight: 400;
+        font-size: 22px;
+        font-family: $fontCustom2;
+        min-height: 32px;
+        height: auto;
+        text-align: center;
+        line-height: 1.45;
+        width: 100%;
+        color: $site-color-2;
+        margin: 8px auto 28px auto;
+      }
+
+      .description {
+        width: auto;
+        height: auto;
+        color: $site-color-2;
+        line-height: 1.4;
+      }
+
+      .block_tag {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        flex-wrap: wrap;
+        margin: 16px 0;
+      }
+
+      .builders {
         display: flex;
         flex-direction: column;
         justify-content: flex-start;
-        width: 250px;
-        min-width: 250px;
-        max-width: 250px;
+        width: 100%;
         height: auto;
 
-        .ul_list {
+        .authors_title {
+          line-height: 24px;
+          height: 24px;
+          font-size: 18px;
+          font-weight: 400;
+          color: $site-color-2;
+          font-family: $fontCustom2;
+          margin-bottom: 5px;
+          padding-left: 32px;
+        }
+
+        .user_list {
           display: flex;
-          flex-direction: column;
+          flex-direction: row;
+          justify-content: flex-start;
+          flex-wrap: wrap;
           width: 100%;
           height: auto;
 
-          .li_authors_title {
-            line-height: 24px;
-            height: 24px;
-            font-size: 14px;
-            font-weight: 400;
-            color: $site-color-2;
-            font-family: $fontCustom2;
-            margin-bottom: 5px;
-          }
-
-          .li_user {
+          .one_user {
             display: flex;
             flex-direction: row;
-            width: 100%;
+            width: auto;
             height: auto;
-            margin: 3px auto;
+            margin: 4px;
+            background: $site-color-12;
+            padding-right: 8px;
+            border-radius: 3px;
 
-            .img_user {
+            .ico {
               height: 24px;
               margin: 0;
               padding: 0;
@@ -279,58 +312,59 @@ body {
               overflow: hidden;
             }
 
-            .user_name {
-              line-height: 24px;
-              height: 24px;
+            .name {
+              line-height: 20px;
+              height: 20px;
               font-size: 14px;
               font-weight: 400;
               color: $site-color-2;
-              margin-left: 5px;
+              margin: 4px 0 0 6px;
               font-family: $fontCustom2;
             }
           }
-        }
-      }
-
-      .description {
-        display: flex;
-        flex-direction: column;
-        justify-content: flex-start;
-        margin-left: 10px;
-        width: auto;
-        height: 100%;
-
-        .title_name_image_list {
-          font-weight: 400;
-          font-size: 18px;
-          font-family: $fontCustom2;
-          min-height: 32px;
-          height: auto;
-          text-align: center;
-          line-height: 1.45;
-          width: 100%;
-          color: $site-color-2;
-          margin: 8px auto 32px auto;
-        }
-
-        .text {
-          color: $site-color-2;
-          line-height: 1.4;
-        }
-
-        .block_tag {
-          display: flex;
-          flex-direction: row;
-          justify-content: center;
-          flex-wrap: wrap;
-          margin-top: 16px;
         }
       }
     }
   }
 }
 
-.container_builders,
+@media screen and (max-width: 1600px) {
+}
+
+@media screen and (max-width: 1400px) {
+}
+
+@media screen and (max-width: 1280px) {
+}
+
+@media screen and (max-width: 1024px) {
+}
+
+@media screen and (max-width: 960px) {
+}
+
+@media screen and (max-width: 768px) {
+}
+
+@media screen and (max-width: 640px) {
+}
+
+@media screen and (max-width: 480px) {
+  .main_gallery {
+    .gallery_list {
+      padding: 0 0 4px 0;
+
+      .one_container {
+        margin: 8px 8px 8px 8px;
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 360px) {
+}
+
+.builders,
 .block_tag {
   display: none !important;
 }
