--- a/src/modules/components/text-editor/TextEditor.module.scss
+++ b/src/modules/components/text-editor/TextEditor.module.scss
@@ -41,7 +41,7 @@
   padding: 5px;
   margin: 0;
   color: $site-color-2;
-  min-height: 350px;
+  min-height: 550px;
   font-family: $fontCustom2 !important;
 
   p {
@@ -114,6 +114,14 @@
       fill: $site-color-2;
     }
   }
+}
+
+.emoji_modal {
+  position: sticky;
+  top: 39px;
+  height: 0;
+  z-index: 2;
+  width: 80%;
 }
 
 body {
@@ -202,6 +210,9 @@ body {
 }
 
 @media screen and (max-width: 768px) {
+  .emoji_modal {
+    width: 98.5%;
+  }
 }
 
 @media screen and (max-width: 640px) {
