--- a/src/modules/components/text-editor/TextEditor.module.scss
+++ b/src/modules/components/text-editor/TextEditor.module.scss
@@ -41,11 +41,10 @@
   padding: 5px;
   margin: 0;
   color: $site-color-2;
-  min-height: 350px;
+  min-height: 550px;
   font-family: $fontCustom2 !important;
 
   p {
-    margin: 0;
     line-height: 1.45;
     font-size: 14px;
   }
@@ -117,6 +116,84 @@
   }
 }
 
+.emoji_modal {
+  position: sticky;
+  top: 39px;
+  height: 0;
+  z-index: 2;
+  width: 80%;
+}
+
+body {
+  .overlay_main_modal {
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    position: fixed;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    z-index: 10099;
+    background: $site-color-4;
+  }
+
+  .modal_main_gallery {
+    position: absolute;
+    z-index: 10098;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    outline: none;
+    margin: 16px;
+    padding: 16px;
+    display: flex;
+    flex-direction: column;
+
+    &::-webkit-scrollbar {
+      width: 6px;
+    }
+
+    .prev {
+      width: auto;
+      height: auto;
+      color: $site-color-2;
+      line-height: 1.4;
+      margin: 0 8px 64px 8px;
+    }
+
+    .close {
+      position: fixed;
+      top: 15px;
+      right: 15px;
+      width: auto;
+      height: 35px;
+      padding: 0 12px;
+      line-height: 35px;
+      text-align: center;
+      background: $site-color-12;
+      border: 1px solid $site-color-5;
+      border-radius: 4px;
+      transition: all 0.25s ease;
+      color: $color-8;
+      cursor: pointer;
+      font-size: 14px;
+      outline: none;
+
+      &:hover,
+      &:focus,
+      &:active {
+        outline: none;
+      }
+
+      &:hover {
+        background: $site-color-1;
+      }
+    }
+  }
+}
+
 @media screen and (max-width: 1600px) {
 }
 
@@ -133,6 +210,9 @@
 }
 
 @media screen and (max-width: 768px) {
+  .emoji_modal {
+    width: 98.5%;
+  }
 }
 
 @media screen and (max-width: 640px) {
