--- a/src/modules/pages/gallery/Gallery.module.scss
+++ b/src/modules/pages/gallery/Gallery.module.scss
@@ -40,7 +40,7 @@
     justify-content: center;
     width: 100%;
     height: auto;
-    padding: 0 8px;
+    padding: 0 0 16px 0;
     border: 1px solid $site-color-5;
     background: $site-color-4;
     margin-bottom: 16px;
@@ -54,17 +54,14 @@
       position: relative;
       overflow: hidden;
       width: 350px;
-      height: 200px;
-      min-height: 200px;
-      max-height: 200px !important;
       border: none;
       border-radius: 8px;
-      margin: 15px;
+      margin: 16px;
       transition: all 0.35s ease;
+      cursor: pointer;
 
       &:hover {
         scale: 1.065;
-        cursor: pointer;
       }
 
       .wrapper_image {
@@ -74,15 +71,16 @@
         align-items: center;
         position: relative;
         overflow: hidden;
-        width: 100%;
-        max-width: 100%;
-        min-width: 100%;
-        height: 100%;
-        max-height: 100%;
-        min-height: 100%;
+        width: 350px;
+        max-width: 350px;
+        min-width: 350px;
+        height: 200px;
+        max-height: 200px;
+        min-height: 200px;
         margin: auto 0;
         border: none;
         border-radius: 5px;
+        background: $site-color-12;
 
         .image {
           width: 100%;
@@ -224,137 +222,88 @@ body {
       border: 1px solid $site-color-5;
       border-radius: 4px;
       width: 100%;
-      max-width: 90%;
+      max-width: 90vw;
+      max-height: 85vh;
       margin: 0 auto;
-      padding: 15px;
-
-      .wrapper {
-        width: 100%;
-        max-width: 1300px !important;
-        margin: 0 auto;
-        height: auto;
-        position: relative;
-
-        .preload_center {
-          position: absolute;
-          top: 0;
-          left: 50%;
-          transform: translate(-50%);
-          height: 100%;
-        }
-
-        .btn_swipe {
-          position: absolute;
-          width: 80px;
-          height: 100%;
-          background: transparent;
-          border: none;
-          border-radius: 0;
-          transition: all 0.35s ease;
-          color: $site-color-2;
-          font-size: 80px;
-          cursor: pointer;
-
-          &:hover {
-            background: $site-color-12;
-            color: $site-color-8;
-          }
-
-          &:disabled {
-            color: $site-color-5;
-            cursor: default;
-            background: transparent;
-          }
-        }
-
-        .right {
-          right: 0;
-        }
-
-        .left {
-          left: 0;
-        }
-      }
-
-      .navigator {
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
-        padding: 0 32px;
-        margin-top: 4px;
-        width: auto;
-        overflow: auto;
-
-        &::-webkit-scrollbar {
-          height: 4px;
-        }
-
-        .prev {
-          max-width: 120px;
-          width: auto;
-          max-height: 50px;
-          height: auto;
-          margin: 2px;
-          cursor: pointer;
-          border: 1px solid transparent;
-          transition: all 0.35s ease;
-
-          &:hover {
-            border: 1px solid $site-color-5;
-          }
-        }
-
-        .active {
-          border: 1px solid $site-color-8 !important;
-        }
-      }
     }
 
     .container_description {
       display: flex;
-      flex-direction: row;
+      flex-direction: column;
       width: 100%;
-      max-width: 90%;
-      margin: 15px auto 0 auto;
+      max-width: 90vw;
+      margin: 16px auto 0 auto;
       height: auto;
       background: $site-color-12;
       border: 1px solid $site-color-5;
       border-radius: 4px;
       padding: 15px;
 
-      .container_builders {
+      .title {
+        font-weight: 400;
+        font-size: 22px;
+        font-family: $fontCustom2;
+        min-height: 32px;
+        height: auto;
+        text-align: center;
+        line-height: 1.45;
+        width: 100%;
+        color: $site-color-2;
+        margin: 8px auto 28px auto;
+      }
+
+      .description {
+        width: auto;
+        height: auto;
+        color: $site-color-2;
+        line-height: 1.4;
+      }
+
+      .block_tag {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        flex-wrap: wrap;
+        margin: 16px 0;
+      }
+
+      .builders {
         display: flex;
         flex-direction: column;
         justify-content: flex-start;
-        width: 250px;
-        min-width: 250px;
-        max-width: 250px;
+        width: 100%;
         height: auto;
 
-        .ul_list {
+        .authors_title {
+          line-height: 24px;
+          height: 24px;
+          font-size: 18px;
+          font-weight: 400;
+          color: $site-color-2;
+          font-family: $fontCustom2;
+          margin-bottom: 5px;
+          padding-left: 32px;
+        }
+
+        .user_list {
           display: flex;
-          flex-direction: column;
+          flex-direction: row;
+          justify-content: flex-start;
+          flex-wrap: wrap;
           width: 100%;
           height: auto;
 
-          .li_authors_title {
-            line-height: 24px;
-            height: 24px;
-            font-size: 14px;
-            font-weight: 400;
-            color: $site-color-2;
-            font-family: $fontCustom2;
-            margin-bottom: 5px;
-          }
-
-          .li_user {
+          .one_user {
             display: flex;
             flex-direction: row;
-            width: 100%;
+            width: auto;
             height: auto;
-            margin: 3px auto;
+            margin: 4px;
+            background: $site-color-12;
+            padding-right: 8px;
+            border-radius: 3px;
 
-            .img_user {
+            .ico {
               height: 24px;
               margin: 0;
               padding: 0;
@@ -363,58 +312,59 @@ body {
               overflow: hidden;
             }
 
-            .user_name {
-              line-height: 24px;
-              height: 24px;
+            .name {
+              line-height: 20px;
+              height: 20px;
               font-size: 14px;
               font-weight: 400;
               color: $site-color-2;
-              margin-left: 5px;
+              margin: 4px 0 0 6px;
               font-family: $fontCustom2;
             }
           }
-        }
-      }
-
-      .description {
-        display: flex;
-        flex-direction: column;
-        justify-content: flex-start;
-        margin-left: 10px;
-        width: auto;
-        height: 100%;
-
-        .title_name_image_list {
-          font-weight: 400;
-          font-size: 18px;
-          font-family: $fontCustom2;
-          min-height: 32px;
-          height: auto;
-          text-align: center;
-          line-height: 1.45;
-          width: 100%;
-          color: $site-color-2;
-          margin: 8px auto 32px auto;
-        }
-
-        .text {
-          color: $site-color-2;
-          line-height: 1.4;
-        }
-
-        .block_tag {
-          display: flex;
-          flex-direction: row;
-          justify-content: center;
-          flex-wrap: wrap;
-          margin-top: 16px;
         }
       }
     }
   }
 }
 
-.container_builders,
+@media screen and (max-width: 1600px) {
+}
+
+@media screen and (max-width: 1400px) {
+}
+
+@media screen and (max-width: 1280px) {
+}
+
+@media screen and (max-width: 1024px) {
+}
+
+@media screen and (max-width: 960px) {
+}
+
+@media screen and (max-width: 768px) {
+}
+
+@media screen and (max-width: 640px) {
+}
+
+@media screen and (max-width: 480px) {
+  .main_gallery {
+    .gallery_list {
+      padding: 0 0 4px 0;
+
+      .one_container {
+        margin: 8px 8px 8px 8px;
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 360px) {
+}
+
+.builders,
 .block_tag {
   display: none !important;
 }
