--- a/src/modules/components/[0_grouped_0]-Profile/gallery/EditAddPost.module.scss
+++ b/src/modules/components/[0_grouped_0]-Profile/gallery/EditAddPost.module.scss
@@ -315,8 +315,7 @@
         padding: 8px;
         margin-top: 8px;
 
-        .choice_text,
-        .choice_select {
+        .choice_text {
           width: 100%;
           min-width: 100%;
           max-width: 100%;
