redux init + some changes

--- a/src/modules/components/[0_grouped_0]-Shopkeepers/mini-component/Minecraft-name.module.scss
+++ b/src/modules/components/[0_grouped_0]-Shopkeepers/mini-component/Minecraft-name.module.scss
@@ -11,7 +11,7 @@
   margin-left: 4px;
   margin-right: 16px;
 
-  .custom {
+  .color {
     font-family: inherit !important;
     font-weight: inherit !important;
     font-size: 13px;
