--- a/src/modules/components/[0_grouped_0]-Shopkeepers/mini-component/Minecraft-register.module.scss
+++ b/src/modules/components/[0_grouped_0]-Shopkeepers/mini-component/Minecraft-register.module.scss
@@ -1,10 +1,10 @@
 @import "../../../../Variables";
 
-.minecraft_id {
+.register {
   width: max-content;
   height: 18px;
   line-height: 18px;
-  color: $site-color-5;
+  color: darken($site-color-2, 50%);
   font-weight: 400;
   font-size: 12px;
   margin: 6px 16px 0 4px;
