--- a/src/modules/components/[0_grouped_0]-Shopkeepers/mini-component/Minecraft-list.module.scss
+++ b/src/modules/components/[0_grouped_0]-Shopkeepers/mini-component/Minecraft-list.module.scss
@@ -1,6 +1,6 @@
 @import "../../../../Variables";
 
-.listWrapper {
+.list {
   display: flex;
   flex-direction: column;
   width: max-content;
@@ -8,7 +8,7 @@
   padding-left: 8px;
   margin-right: 16px;
 
-  .list {
+  .item {
     height: auto;
     min-height: 0;
     max-height: none;
@@ -22,15 +22,16 @@
     letter-spacing: 0.5px;
     color: $site-color-2;
 
-    .red {
-      color: lighten($site-color-11, 25%) !important;
-      font-family: inherit;
-      font-size: inherit;
-      font-weight: inherit;
+    .default {
+      color: $site-color-2 !important;
     }
 
-    .main {
-      color: $site-color-2 !important;
+    .red {
+      color: lighten($site-color-11, 25%) !important;
+    }
+
+    .default,
+    .red {
       font-family: inherit;
       font-size: inherit;
       font-weight: inherit;
